WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116230
Missing UNUSED_PARAM macro for textPosition argument in WebKitAccessibleInterfaceText
https://bugs.webkit.org/show_bug.cgi?id=116230
Summary
Missing UNUSED_PARAM macro for textPosition argument in WebKitAccessibleInter...
Eduardo Lima Mitev
Reported
2013-05-16 08:56:58 PDT
webkitAccessibleTextGetTextForOffset() method in WebKitAccessibleInterfaceText is only implemented by GTK port, however the 'textPosition' argument is not listed as unused param for the rest of the ports, causing a warning.
Attachments
patch
(2.08 KB, patch)
2013-05-16 09:02 PDT
,
Eduardo Lima Mitev
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eduardo Lima Mitev
Comment 1
2013-05-16 09:02:31 PDT
Created
attachment 201963
[details]
patch
Mario Sanchez Prada
Comment 2
2013-05-16 09:13:01 PDT
Comment on
attachment 201963
[details]
patch Looks good to me, sorry for having forgotten about this in the first place
WebKit Commit Bot
Comment 3
2013-05-16 20:16:54 PDT
Comment on
attachment 201963
[details]
patch Clearing flags on attachment: 201963 Committed
r150236
: <
http://trac.webkit.org/changeset/150236
>
WebKit Commit Bot
Comment 4
2013-05-16 20:16:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug