Missing UNUSED_PARAM macro for textPosition argument in WebKitAccessibleInterfaceText https://bugs.webkit.org/show_bug.cgi?id=116230

Patch by Eduardo Lima Mitev <elima@igalia.com> on 2013-05-16
Reviewed by Chris Fleizach.

No new functionality, no new tests.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(webkitAccessibleTextGetTextForOffset): List textPosition argument as
unused parameter for all platforms except GTK.

Canonical link: https://commits.webkit.org/134658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150236 268f45cc-cd09-0410-ab3c-d52691b4dbfc